# Qt_functional

Filesystem/: CMakeLists.txt  main.cpp
Initializer_list/: CMakeLists.txt  main.cpp
Lambda_expression/: CMakeLists.txt  main.cpp
